--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "ClearBluetooth"
+
+rootProject.name = 'android_automaton_app'
 include ':app'
