--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,8 +29,9 @@ jobs:
           gradle wrapper
           ./gradlew clean assembleDebug
       - run: tree
-      - name: Archive builds
+      - name: Archive apk
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v2
         with:
           name: app-debug-apk
-          path: '**/apk-debug.apk'
+          path: 'app/build/outputs/apk/debug/app-debug.apk'
