--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,8 +30,12 @@ jobs:
           ./gradlew clean assembleDebug
       - run: tree
       - name: Archive apk
-        if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v2
         with:
           name: app-debug-apk
           path: 'app/build/outputs/apk/debug/app-debug.apk'
+      - name: Add apk to release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: 'app/build/outputs/apk/debug/app-debug.apk'
